--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <!-- Loading -->
     <div id="loading" class="lds-heart">
       <div>
-        <p>Loading...</p>
+        <p>Loading</p>
       </div>
     </div>
     <!-- Header -->
     <header id="header">
-      <h1><a href="/">Toshiya Marukubo</a></h1>
+      <h1><a href="/">Toshiya<br>Marukubo</a></h1>
       <p>I'm a non-professional.<br class="sm"> I like to do meaningless things.</p>
     </header>
     <!-- Nav -->
@@ -54,19 +54,20 @@
         <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-lg"></i></a></li>
       </ul>
     </nav>
+    <!-- Canvas -->
+    <canvas id="canvas">This browser cannot use a canvas.</canvas>
+    <canvas id="canvasBack">This browser cannot use a canvas.</canvas>
     <!-- Main -->
     <main id="main" style="display: none;">
-      <!-- Canvas -->
-      <canvas id="canvas">This browser cannot use a canvas.</canvas>
-      <canvas id="canvasBack">This browser cannot use a canvas.</canvas>
       <!-- Works -->
       <section id="works">
         <h2>Works</h2>
         <ul id="dispWorks">
           <li><a href="./works/lightBall/index.html"><img src="./home/img/og/og-mini-lightBall.png" alt="lightBall"></a><p>lightBall / Apr 28, 2020</p></li>
           <li><a href="./works/slime/index.html"><img src="./home/img/og/og-mini-slime.png" alt="slime"></a><p>slime / Apr 28, 2020</p></li>
-          <li><a href="./works/simulationVer2/index.html"><img src="./home/img/og/og-mini-simulationVer2.png" alt="simulationVer2"></a><p>simulationVer2 / Apr 24, 2020</p></li>
-          <li><a href="./works/simulationVer1/index.html"><img src="./home/img/og/og-mini-simulationVer1.png" alt="simulationVer1"></a><p>simulationVer1 / Apr 22, 2020</p></li>
+          <li><a href="./works/nowLoading/index.html"><img src="./home/img/og/og-mini-nowLoading.png" alt="nowLoading"></a><p>nowLoading / Apr 26, 2020</p></li>
+          <li><a href="./works/kanji/index.html"><img src="./home/img/og/og-mini-kanji.png" alt="kanji"></a><p>kanji / Apr 24, 2020</p></li>
+          <li><a href="./works/bug/index.html"><img src="./home/img/og/og-mini-bug.png" alt="bug"></a><p>bug / Apr 22, 2020</p></li>
           <li><a href="./works/goToTheMoon/index.html"><img src="./home/img/og/og-mini-goToTheMoon.png" alt="goToTheMoon"></a><p>goToTheMoon / Apr 19, 2020</p></li>
           <li><a href="./works/cell/index.html"><img src="./home/img/og/og-mini-cell.png" alt="cell"></a><p>cell / Apr 17, 2020</p></li>
           <li><a href="./works/fairy/index.html"><img src="./home/img/og/og-mini-fairy.png" alt="fairy"></a><p>fairy / Apr 16, 2020</p></li>
@@ -83,7 +84,6 @@
           <li><a href="./works/chocolate/index.html"><img src="./home/img/og/og-min-chocolate.png" alt="chocolate"></a><p>chocolate / Feb 06, 2020</p></li>
           <li><a href="./works/happyValentine/index.html"><img src="./home/img/og/og-min-happyValentine.png" alt="happyValentine"></a><p>happyValentine / Feb 05, 2020</p></li>
           <li><a href="./works/aquarium/index.html"><img src="./home/img/og/og-min-aquarium.png" alt="aquarium"></a><p>aquarium / Feb 02, 2020</p></li>
-          <li><a href="./works/firefly/index.html"><img src="./home/img/og/og-min-firefly.png" alt="firefly"></a><p>firefly / Jan 31, 2020</p></li>
           <li><a href="./works/torch/index.html"><img src="./home/img/og/og-min-torch.png" alt="torch"></a><p>torch / Jan 30, 2020</p></li>
           <li><a href="./works/snowyLandscape/index.html"><img src="./home/img/og/og-min-snowyLandscape.png" alt="snowyLandscape"></a><p>snowyLandscape / Jan 28, 2020</p></li>
           <li><a href="./works/kiraYaba/index.html"><img src="./home/img/og/og-min-kiraYaba.png" alt="kiraYaba"></a><p>kiraYaba / Jan 27, 2020</p></li>
@@ -106,10 +106,10 @@
           <p><img src="./home/img/mypicture.jpg" alt="my picture"></p>
           <p>It's not that I'm angry especially.</p>
           <ul>
-            <li><a href="http://www.marukubo.net"><i class="fas fa-user-graduate fa-2x"></i></a></li>
-            <li><a href="https://codepen.io/toshiya-marukubo"><i class="fab fa-codepen fa-2x"></i></a></li>
-            <li><a href="https://github.com/toshiya-marukubo"><i class="fab fa-github fa-2x"></i></a></li>
-            <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-2x"></i></a></li>
+            <li><a href="http://www.marukubo.net"><i class="fas fa-user-graduate fa-lg"></i></a></li>
+            <li><a href="https://codepen.io/toshiya-marukubo"><i class="fab fa-codepen fa-lg"></i></a></li>
+            <li><a href="https://github.com/toshiya-marukubo"><i class="fab fa-github fa-lg"></i></a></li>
+            <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-lg"></i></a></li>
           </ul>
         </div>
         <section class="aboutRight">
