--- a/works/cell/index.html
+++ b/works/cell/index.html
@@ -37,19 +37,22 @@
     <!-- Header -->
     <header id="header">
       <h1>cell</h1>
-      <h2>When is displayed particles, it stick to closest particle, like a cell. Click to restart.</h2>
-      <p>Created date / April 17, 2020</p>
-      <p><a href="../../index.html">Back</a></p>
+      <ul>
+        <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
+        <li id="other">Other</li>
+        <li><a href="../../index.html">Home</a></li>
+      </ul>
     </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Main -->
     <main id="main" style="display: none;">
-      <canvas id="canvas">This browser cannot use a canvas.</canvas>
-      <canvas id="canvasBack">This browser cannot use a canvas.</canvas>
+      <canvas id="canvas">Canvas not supported.</canvas>
+      <canvas id="canvasBack">Canvas not supported.</canvas>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
+    <script src="../../home/js/other.js"></script>
     <script src="./cell.js"></script>
   </body>
 </html>
