--- a/works/fireworks/index.html
+++ b/works/fireworks/index.html
@@ -37,20 +37,24 @@
     <!-- Header -->
     <header id="header">
       <h1>fireworks</h1>
-      <p>Created date / January 23, 2020</p>
-      <p><a href="../../index.html">Back</a></p>
+      <ul>
+        <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
+        <li id="other">Other</li>
+        <li><a href="../../index.html">Home</a></li>
+      </ul>    
     </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- main -->
     <main id="main" style="display: none;">
-      <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <canvas id="canvas">Canvas not supported.</canvas>
       <div class="controller">
         <input type="range" id="count" min="0" max="50" step="1" value="30">
       </div>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
+    <script src="../../home/js/other.js"></script>
     <script src="./fireworks.js"></script>
   </body>
 </html>
