--- a/works/mamaragan/index.html
+++ b/works/mamaragan/index.html
@@ -37,20 +37,23 @@
     <!-- Header -->
     <header id="header">
       <h1>mamaragan</h1>
-      <h2>Inspired by God Enel from ONE PIECE.</h2>
-      <p>Created date / February 16, 2020</p>
-      <p><a href="../../index.html">Back</a></p>
+      <ul>
+        <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
+        <li id="other">Other</li>
+        <li><a href="../../index.html">Home</a></li>
+      </ul>
     </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Main -->
     <main id="main" style="display: none;">
-      <canvas id="canvasThunder">This browser cannot use a canvas.</canvas>
-      <canvas id="canvasCloud">This browser cannot use a canvas.</canvas>
-      <canvas id="canvasRain">This browser cannot use a canvas.</canvas>
+      <canvas id="canvasThunder">Canvas not supported.</canvas>
+      <canvas id="canvasCloud">Canvas not supported.</canvas>
+      <canvas id="canvasRain">Canvas not supported.</canvas>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
+    <script src="../../home/js/other.js"></script>
     <script src="./mamaragan.js"></script>
   </body>
 </html>
