--- a/works/65536/index.html
+++ b/works/65536/index.html
@@ -39,19 +39,22 @@
     <!-- Header -->
     <header id="header">
       <h1>65536</h1>
-      <p>Created date / January 21, 2020</p>
-      <p><a href="../../index.html">Back</a></p>
+      <ul>
+        <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
+        <li id="other">Other</li>
+        <li><a href="../../index.html">Home</a></li>
+      </ul>
     </header>
     <!-- Main -->
     <main id="main" style="display: none;">
-      <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <canvas id="canvas">Canvas not supported.</canvas>
       <div class="controller">
         <input type="range" id="split" min="1" max="256" step="4" value="256">
       </div>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
+    <script src="../../home/js/other.js"></script>
     <script src="./65536.js"></script>
   </body>
 </html>
-
