--- a/works/kanji/index.html
+++ b/works/kanji/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | textPractice">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-textPractice.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | kanji">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-kanji.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | textPractice</title>
+    <title>Toshiya Marukubo | Homepage | kanji</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,19 +36,23 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <h1>textPractice</h1>
-      <p>Created date / April 23, 2020</p>
-      <p><a href="../../index.html">Back</a></p>
+      <h1>kanji</h1>
+      <ul>
+        <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
+        <li id="other">Other</li>
+        <li><a href="../../index.html">Home</a></li>
+      </ul>    
     </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Main -->
     <main id="main" style="display: none;">
-      <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <canvas id="canvas">Canvas not supported.</canvas>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
-    <script src="./textPractice.js"></script>
+    <script src="../../home/js/other.js"></script>
+    <script src="./kanji.js"></script>
   </body>
 </html>
 
