--- a/works/lightBall/index.html
+++ b/works/lightBall/index.html
@@ -37,9 +37,11 @@
     <!-- Header -->
     <header id="header">
       <h1>lightBall</h1>
-      <h2>You can click to change color.</h2>
-      <p>Created date / April 28, 2020</p>
-      <p><a href="../../index.html">Back</a></p>
+      <ul>
+        <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
+        <li id="other">Other</li>
+        <li><a href="../../index.html">Home</a></li>
+      </ul>
     </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
@@ -49,6 +51,7 @@
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
+    <script src="../../home/js/other.js"></script>
     <script src="./lightBall.js"></script>
   </body>
 </html>
