--- a/works/neonWave/index.html
+++ b/works/neonWave/index.html
@@ -37,14 +37,17 @@
     <!-- Header -->
     <header id="header">
       <h1>neonWave</h1>
-      <p>Created date / February 13, 2020</p>
-      <p><a href="../../index.html">Back</a></p>
+      <ul>
+        <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
+        <li id="other">Other</li>
+        <li><a href="../../index.html">Home</a></li>
+      </ul>
     </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Main -->
     <main id="main" style="display: none;">
-      <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <canvas id="canvas">Canvas not supported.</canvas>
       <p id="openController"><a href="#">Open Controller</a></p>
       <div id="controller">
         <p id="closeController"><a href="#">Close</a></p>
@@ -96,6 +99,7 @@
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
+    <script src="../../home/js/other.js"></script>
     <script src="./neonWave.js"></script>
   </body>
 </html>
