--- a/works/orangeKun/index.html
+++ b/works/orangeKun/index.html
@@ -37,19 +37,22 @@
     <!-- Header -->
     <header id="header">
       <h1>orangeKun</h1>
-      <h2>Please click the window. You can harvest many orange.</2>
-      <p>Created date / February 29, 2020</p>
-      <p><a href="../../index.html">Back</a></p>
+      <ul>
+        <li><a href="https://twitter.com/toshiyamarukubo">@toshiyamarukubo</a></li>
+        <li id="other">Other</li>
+        <li><a href="../../index.html">Home</a></li>
+      </ul>
     </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Main -->
     <main id="main" style="display: none;">
-      <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <canvas id="canvas">Canvas not supported.</canvas>
       <p id="count">You got <span id="countNum">0</span>.</p>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
+    <script src="../../home/js/other.js"></script>
     <script src="./orangeKun.js"></script>
   </body>
 </html>
