--- a/works/slimeVer2/index.html
+++ b/works/slimeVer2/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | simulationVer2">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-simulationVer2.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | slime">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-slime.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | simulationVer2</title>
+    <title>Toshiya Marukubo | Homepage | slime</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,20 +36,19 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <h1>simulationVer2</h1>
-      <h2>Please click the window.</h2>
-      <p>Created date / April 24, 2020</p>
+      <h1>slime</h1>
+      <p>Created date / April 28, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Main -->
     <main id="main" style="display: none;">
-      <canvas id="canvas">This browser cannot use a canvas.</canvas>
+      <canvas id="canvas">Canvas not supported.</canvas>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
-    <script src="./simulationVer2.js"></script>
+    <script src="./slime.js"></script>
   </body>
 </html>
 
