--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
       <section id="works">
         <h2>Works</h2>
         <ul id="dispWorks">
-          <li><a href="./works/lightBall/index.html"><img src="./home/img/og/og-mini-lightBall.png" alt="lightBall"></a><p>lightBall / Apr 28, 2020</p></li>
-          <li><a href="./works/slime/index.html"><img src="./home/img/og/og-mini-slime.png" alt="slime"></a><p>slime / Apr 28, 2020</p></li>
-          <li><a href="./works/nowLoading/index.html"><img src="./home/img/og/og-mini-nowLoading.png" alt="nowLoading"></a><p>nowLoading / Apr 26, 2020</p></li>
-          <li><a href="./works/kanji/index.html"><img src="./home/img/og/og-mini-kanji.png" alt="kanji"></a><p>kanji / Apr 24, 2020</p></li>
-          <li><a href="./works/bug/index.html"><img src="./home/img/og/og-mini-bug.png" alt="bug"></a><p>bug / Apr 22, 2020</p></li>
-          <li><a href="./works/goToTheMoon/index.html"><img src="./home/img/og/og-mini-goToTheMoon.png" alt="goToTheMoon"></a><p>goToTheMoon / Apr 19, 2020</p></li>
-          <li><a href="./works/cell/index.html"><img src="./home/img/og/og-mini-cell.png" alt="cell"></a><p>cell / Apr 17, 2020</p></li>
-          <li><a href="./works/fairy/index.html"><img src="./home/img/og/og-mini-fairy.png" alt="fairy"></a><p>fairy / Apr 16, 2020</p></li>
-          <li><a href="./works/link/index.html"><img src="./home/img/og/og-mini-link.png" alt="link"></a><p>link / Apr 14, 2020</p></li>
-          <li><a href="./works/socialDistance/index.html"><img src="./home/img/og/og-mini-socialDistance.png" alt="socialDistance"></a><p>socialDistance / Apr 13, 2020</p></li>
-          <li><a href="./works/stayHome/index.html"><img src="./home/img/og/og-mini-stayHome.png" alt="stayHome"></a><p>stayHome / Apr 12, 2020</p></li>
+          <li><a href="./works/lightBall/index.html"><img src="./home/img/og/og-min-lightBall.png" alt="lightBall"></a><p>lightBall / Apr 28, 2020</p></li>
+          <li><a href="./works/slime/index.html"><img src="./home/img/og/og-min-slime.png" alt="slime"></a><p>slime / Apr 28, 2020</p></li>
+          <li><a href="./works/nowLoading/index.html"><img src="./home/img/og/og-min-nowLoading.png" alt="nowLoading"></a><p>nowLoading / Apr 26, 2020</p></li>
+          <li><a href="./works/kanji/index.html"><img src="./home/img/og/og-min-kanji.png" alt="kanji"></a><p>kanji / Apr 24, 2020</p></li>
+          <li><a href="./works/bug/index.html"><img src="./home/img/og/og-min-bug.png" alt="bug"></a><p>bug / Apr 22, 2020</p></li>
+          <li><a href="./works/goToTheMoon/index.html"><img src="./home/img/og/og-min-goToTheMoon.png" alt="goToTheMoon"></a><p>goToTheMoon / Apr 19, 2020</p></li>
+          <li><a href="./works/cell/index.html"><img src="./home/img/og/og-min-cell.png" alt="cell"></a><p>cell / Apr 17, 2020</p></li>
+          <li><a href="./works/fairy/index.html"><img src="./home/img/og/og-min-fairy.png" alt="fairy"></a><p>fairy / Apr 16, 2020</p></li>
+          <li><a href="./works/link/index.html"><img src="./home/img/og/og-min-link.png" alt="link"></a><p>link / Apr 14, 2020</p></li>
+          <li><a href="./works/socialDistance/index.html"><img src="./home/img/og/og-min-socialDistance.png" alt="socialDistance"></a><p>socialDistance / Apr 13, 2020</p></li>
+          <li><a href="./works/stayHome/index.html"><img src="./home/img/og/og-min-stayHome.png" alt="stayHome"></a><p>stayHome / Apr 12, 2020</p></li>
           <li><a href="./works/sunFlower/index.html"><img src="./home/img/og/og-min-sunFlower.png" alt="sunFlower"></a><p>sunFlower / Apr 10, 2020</p></li>
           <li><a href="./works/bigBang/index.html"><img src="./home/img/og/og-min-bigBang.png" alt="bigBang"></a><p>bigBang / Mar 04, 2020</p></li>
           <li><a href="./works/orangeKun/index.html"><img src="./home/img/og/og-min-orangeKun.png" alt="orangeKun"></a><p>orangeKun / Feb 29, 2020</p></li>
