--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Header -->
     <header id="header">
       <h1><a href="/">Toshiya<br>Marukubo</a></h1>
-      <p>I'm a non-professional.<br class="sm"> I like to do meaningless things.</p>
+      <p>I'm a non-professional. I like to do meaningless things.</p>
     </header>
     <!-- Nav -->
     <nav>
@@ -63,6 +63,7 @@
       <section id="works">
         <h2>Works</h2>
         <ul id="dispWorks">
+          <li><a href="./works/gap/index.html"><img src="./home/img/og/og-min-gap.png" alt="gap"></a><p>gap / May 02, 2020</p></li>
           <li><a href="./works/lightBall/index.html"><img src="./home/img/og/og-min-lightBall.png" alt="lightBall"></a><p>lightBall / Apr 28, 2020</p></li>
           <li><a href="./works/slime/index.html"><img src="./home/img/og/og-min-slime.png" alt="slime"></a><p>slime / Apr 28, 2020</p></li>
           <li><a href="./works/nowLoading/index.html"><img src="./home/img/og/og-min-nowLoading.png" alt="nowLoading"></a><p>nowLoading / Apr 26, 2020</p></li>
