--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <!-- Canvas -->
     <canvas id="canvas">This browser cannot use a canvas.</canvas>
     <canvas id="canvasBack">This browser cannot use a canvas.</canvas>
-    <!-- Congent -->
-    <div id="content">
+    <!-- Content -->
+    <div id="main" style="display: none;">
       <!-- Main -->
-      <main id="main" style="display: none;">
+      <main>
         <!-- Works -->
         <section id="works">
           <h2>Works</h2>
@@ -147,7 +147,7 @@
         </section>
       </main>
       <!-- Footer -->
-      <footer id="footer" style="display: none;">
+      <footer id="footer">
         <small>&copy 2020 Toshiya Marukubo.</small>
       </footer>
     </div>
