--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h2>Works</h2>
           <ul id="dispWorks">
+            <li><a href="./works/neuron/index.html"><img loading="lazy" src="./home/img/og/og-min-neuron.png" alt="neuron"></a><p>neuron / May 03, 2020</p></li>
             <li><a href="./works/gap/index.html"><img loading="lazy" src="./home/img/og/og-min-gap.png" alt="gap"></a><p>gap / May 02, 2020</p></li>
             <li><a href="./works/lightBall/index.html"><img loading="lazy" src="./home/img/og/og-min-lightBall.png" alt="lightBall"></a><p>lightBall / Apr 28, 2020</p></li>
             <li><a href="./works/slime/index.html"><img loading="lazy" src="./home/img/og/og-min-slime.png" alt="slime"></a><p>slime / Apr 28, 2020</p></li>
