--- a/index.html
+++ b/index.html
@@ -34,36 +34,32 @@
     <link rel="stylesheet" href="./home/css/style.css">
   </head>
   <body>
-    <!-- Loading -->
-    <div id="loading" class="lds-heart">
-      <div>
-        <p>Loading</p>
-      </div>
-    </div>
     <!-- Header -->
     <header id="header">
       <h1><a href="/">Toshiya<br>Marukubo</a></h1>
-      <p>I'm a non-professional. I like to do meaningless things.</p>
     </header>
-    <!-- Nav -->
-    <nav>
-      <ul>
-        <li><a href="http://www.marukubo.net"><i class="fas fa-user-graduate fa-lg"></i></a></li>
-        <li><a href="https://codepen.io/toshiya-marukubo"><i class="fab fa-codepen fa-lg"></i></a></li>
-        <li><a href="https://github.com/toshiya-marukubo"><i class="fab fa-github fa-lg"></i></a></li>
-        <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-lg"></i></a></li>
-      </ul>
-    </nav>
-    <!-- Canvas -->
-    <canvas id="canvas">This browser cannot use a canvas.</canvas>
-    <canvas id="canvasBack">This browser cannot use a canvas.</canvas>
-    <!-- Content -->
-    <div id="main" style="display: none;">
+    <div id="mainImage">
+      <img loading="lazy" src="./home/img/og/mainImage-pc.png" alt="main image">
+    </div>
+    <div id="content">
       <!-- Main -->
       <main>
+        <!-- Message -->
+        <section id="message">
+          <h2>I am doing what I can do on code.</h2>
+          <nav>
+            <ul>
+              <li><a href="http://www.marukubo.net">Learning Place</a></li>
+              <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
+              <li><a href="https://github.com/toshiya-marukubo">Github</a></li>
+              <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
+              <li><a href="#about">About</a></li>
+            </ul>
+          </nav>
+        </section>
         <!-- Works -->
         <section id="works">
-          <h2>Works</h2>
+          <h3>Works</h3>
           <ul id="dispWorks">
             <li><a href="./works/loop/index.html"><img loading="lazy" src="./home/img/og/og-min-loop.png" alt="loop"></a><p>loop / May 04, 2020</p></li>
             <li><a href="./works/neuron/index.html"><img loading="lazy" src="./home/img/og/og-min-neuron.png" alt="neuron"></a><p>neuron / May 03, 2020</p></li>
@@ -102,19 +98,17 @@
             <li><a href="./works/starlight/index.html"><img loading="lazy" src="./home/img/og/og-min-starlight.png" alt="starlight"></a><p>starlight / Jan 09, 2020</p></li>
             <li><a href="./works/jewelrySnow/index.html"><img loading="lazy" src="./home/img/og/og-min-jewelrySnow.png" alt="jewelrySnow"></a><p>jewelrySnow / Jan 08, 2020</p></li>
           </ul>
-          <button id="moreBtn">See All</button>
         </section>
         <!-- About -->
         <section id="about" class="cf">
-          <h2>About</h2>
+          <h3>About</h3>
           <div class="aboutLeft">
             <p><img loading="lazy" src="./home/img/mypicture.jpg" alt="my picture"></p>
-            <p>It's not that I'm angry especially.</p>
             <ul>
-              <li><a href="http://www.marukubo.net"><i class="fas fa-user-graduate fa-lg"></i></a></li>
-              <li><a href="https://codepen.io/toshiya-marukubo"><i class="fab fa-codepen fa-lg"></i></a></li>
-              <li><a href="https://github.com/toshiya-marukubo"><i class="fab fa-github fa-lg"></i></a></li>
-              <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-lg"></i></a></li>
+              <li><a href="http://www.marukubo.net">Learning Place</a></li>
+              <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
+              <li><a href="https://github.com/toshiya-marukubo">Github</a></li>
+              <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
             </ul>
           </div>
           <section class="aboutRight">
@@ -153,15 +147,5 @@
         <small>&copy 2020 Toshiya Marukubo.</small>
       </footer>
     </div>
-    <!-- Vehicle -->
-    <span><i class="vehicle fas fa-truck-pickup fa-3x" data-fa-transform="down-1"></i></span>
-    <!-- Script -->
-    <script src="./home/js/loading.js"></script>
-    <script src="./home/js/dispWorks.js"></script>
-    <!--
-    <script src="./home/js/worksHover.js"></script>
-    -->
-    <script src="./home/js/snowyTown.js"></script>
-    <script src="./home/js/all.min.js"></script>
   </body>
 </html>
