--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <ul>
               <li><a href="http://www.marukubo.net">Learning Place</a></li>
               <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
-              <li><a href="https://github.com/toshiya-marukubo">Github</a></li>
+              <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
               <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
               <li><a href="#about">About</a></li>
             </ul>
@@ -107,7 +107,7 @@
             <ul>
               <li><a href="http://www.marukubo.net">Learning Place</a></li>
               <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
-              <li><a href="https://github.com/toshiya-marukubo">Github</a></li>
+              <li><a href="https://github.com/toshiya-marukubo">GitHub</a></li>
               <li><a href="https://twitter.com/toshiyamarukubo">Twitter</a></li>
             </ul>
           </div>
