--- a/index.html
+++ b/index.html
@@ -147,5 +147,6 @@
         <small>&copy 2020 Toshiya Marukubo.</small>
       </footer>
     </div>
+    <script src="./home/js/fadeIn.js"></script>
   </body>
 </html>
