--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1><a href="/">Toshiya<br>Marukubo</a></h1>
     </header>
     <div id="mainImage">
-      <img src="./home/img/og/mainImage-pc.png" alt="main image">
+      <img loading="lazy" src="./home/img/og/mainImage-pc.png" alt="main image">
     </div>
     <div id="content">
       <!-- Main -->
@@ -61,49 +61,49 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
-            <li><a href="./works/loop/index.html"><img src="./home/img/og/og-min-loop.png" alt="loop"></a><p>loop / May 04, 2020</p></li>
-            <li><a href="./works/neuron/index.html"><img src="./home/img/og/og-min-neuron.png" alt="neuron"></a><p>neuron / May 03, 2020</p></li>
-            <li><a href="./works/gap/index.html"><img src="./home/img/og/og-min-gap.png" alt="gap"></a><p>gap / May 02, 2020</p></li>
-            <li><a href="./works/lightBall/index.html"><img src="./home/img/og/og-min-lightBall.png" alt="lightBall"></a><p>lightBall / Apr 28, 2020</p></li>
-            <li><a href="./works/slime/index.html"><img src="./home/img/og/og-min-slime.png" alt="slime"></a><p>slime / Apr 28, 2020</p></li>
-            <li><a href="./works/nowLoading/index.html"><img src="./home/img/og/og-min-nowLoading.png" alt="nowLoading"></a><p>nowLoading / Apr 26, 2020</p></li>
-            <li><a href="./works/kanji/index.html"><img src="./home/img/og/og-min-kanji.png" alt="kanji"></a><p>kanji / Apr 24, 2020</p></li>
-            <li><a href="./works/bug/index.html"><img src="./home/img/og/og-min-bug.png" alt="bug"></a><p>bug / Apr 22, 2020</p></li>
-            <li><a href="./works/goToTheMoon/index.html"><img src="./home/img/og/og-min-goToTheMoon.png" alt="goToTheMoon"></a><p>goToTheMoon / Apr 19, 2020</p></li>
-            <li><a href="./works/cell/index.html"><img src="./home/img/og/og-min-cell.png" alt="cell"></a><p>cell / Apr 17, 2020</p></li>
-            <li><a href="./works/fairy/index.html"><img src="./home/img/og/og-min-fairy.png" alt="fairy"></a><p>fairy / Apr 16, 2020</p></li>
-            <li><a href="./works/link/index.html"><img src="./home/img/og/og-min-link.png" alt="link"></a><p>link / Apr 14, 2020</p></li>
-            <li><a href="./works/socialDistance/index.html"><img src="./home/img/og/og-min-socialDistance.png" alt="socialDistance"></a><p>socialDistance / Apr 13, 2020</p></li>
-            <li><a href="./works/stayHome/index.html"><img src="./home/img/og/og-min-stayHome.png" alt="stayHome"></a><p>stayHome / Apr 12, 2020</p></li>
-            <li><a href="./works/sunFlower/index.html"><img src="./home/img/og/og-min-sunFlower.png" alt="sunFlower"></a><p>sunFlower / Apr 10, 2020</p></li>
-            <li><a href="./works/bigBang/index.html"><img src="./home/img/og/og-min-bigBang.png" alt="bigBang"></a><p>bigBang / Mar 04, 2020</p></li>
-            <li><a href="./works/orangeKun/index.html"><img src="./home/img/og/og-min-orangeKun.png" alt="orangeKun"></a><p>orangeKun / Feb 29, 2020</p></li>
-            <li><a href="./works/particleParty/index.html"><img src="./home/img/og/og-min-particleParty.png" alt="particleParty"></a><p>particleParty / Feb 20, 2020</p></li>
-            <li><a href="./works/mamaragan/index.html"><img src="./home/img/og/og-min-mamaragan.png" alt="mamaragan"></a><p>mamaragan / Feb 16, 2020</p></li>
-            <li><a href="./works/neonWave/index.html"><img src="./home/img/og/og-min-neonWave.png" alt="neonWave"></a><p>neonWave / Feb 13, 2020</p></li>
-            <li><a href="./works/fullMoon/index.html"><img src="./home/img/og/og-min-fullMoon.png" alt="fullMoon"></a><p>fullMoon / Feb 11, 2020</p></li>
-            <li><a href="./works/chocolate/index.html"><img src="./home/img/og/og-min-chocolate.png" alt="chocolate"></a><p>chocolate / Feb 06, 2020</p></li>
-            <li><a href="./works/happyValentine/index.html"><img src="./home/img/og/og-min-happyValentine.png" alt="happyValentine"></a><p>happyValentine / Feb 05, 2020</p></li>
-            <li><a href="./works/aquarium/index.html"><img src="./home/img/og/og-min-aquarium.png" alt="aquarium"></a><p>aquarium / Feb 02, 2020</p></li>
-            <li><a href="./works/torch/index.html"><img src="./home/img/og/og-min-torch.png" alt="torch"></a><p>torch / Jan 30, 2020</p></li>
-            <li><a href="./works/snowyLandscape/index.html"><img src="./home/img/og/og-min-snowyLandscape.png" alt="snowyLandscape"></a><p>snowyLandscape / Jan 28, 2020</p></li>
-            <li><a href="./works/kiraYaba/index.html"><img src="./home/img/og/og-min-kiraYaba.png" alt="kiraYaba"></a><p>kiraYaba / Jan 27, 2020</p></li>
-            <li><a href="./works/fireworks/index.html"><img src="./home/img/og/og-min-fireworks.png" alt="fireworks"></a><p>fireworks / Jan 23, 2020</p></li>
-            <li><a href="./works/65536/index.html"><img src="./home/img/og/og-min-65536.png" alt="65536"></a><p>65536 / Jan 21, 2020</p></li>
-            <li><a href="./works/rainyDay/index.html"><img src="./home/img/og/og-min-rainyDay.png" alt="rainyDay"></a><p>rainyDay / Jan 20, 2020</p></li>
-            <li><a href="./works/mellomelloMellow/index.html"><img src="./home/img/og/og-min-mellomelloMellow.png" alt="mellomelloMellow"></a><p>mellomelloMellow / Jan 15, 2020</p></li>
-            <li><a href="./works/grassGrow/index.html"><img src="./home/img/og/og-min-grassGrow.png" alt="grassGrow"></a><p>grassGrow / Jan 15, 2020</p></li>
-            <li><a href="./works/fireball/index.html"><img src="./home/img/og/og-min-fireball.png" alt="fireball"></a><p>fireball / Jan 11, 2020</p></li>
-            <li><a href="./works/milkyWay/index.html"><img src="./home/img/og/og-min-milkyWay.png" alt="milyWay"></a><p>milkyway / Jan 10, 2020</p></li>
-            <li><a href="./works/starlight/index.html"><img src="./home/img/og/og-min-starlight.png" alt="starlight"></a><p>starlight / Jan 09, 2020</p></li>
-            <li><a href="./works/jewelrySnow/index.html"><img src="./home/img/og/og-min-jewelrySnow.png" alt="jewelrySnow"></a><p>jewelrySnow / Jan 08, 2020</p></li>
+            <li><a href="./works/loop/index.html"><img loading="lazy" src="./home/img/og/og-min-loop.png" alt="loop"></a><p>loop / May 04, 2020</p></li>
+            <li><a href="./works/neuron/index.html"><img loading="lazy" src="./home/img/og/og-min-neuron.png" alt="neuron"></a><p>neuron / May 03, 2020</p></li>
+            <li><a href="./works/gap/index.html"><img loading="lazy" src="./home/img/og/og-min-gap.png" alt="gap"></a><p>gap / May 02, 2020</p></li>
+            <li><a href="./works/lightBall/index.html"><img loading="lazy" src="./home/img/og/og-min-lightBall.png" alt="lightBall"></a><p>lightBall / Apr 28, 2020</p></li>
+            <li><a href="./works/slime/index.html"><img loading="lazy" src="./home/img/og/og-min-slime.png" alt="slime"></a><p>slime / Apr 28, 2020</p></li>
+            <li><a href="./works/nowLoading/index.html"><img loading="lazy" src="./home/img/og/og-min-nowLoading.png" alt="nowLoading"></a><p>nowLoading / Apr 26, 2020</p></li>
+            <li><a href="./works/kanji/index.html"><img loading="lazy" src="./home/img/og/og-min-kanji.png" alt="kanji"></a><p>kanji / Apr 24, 2020</p></li>
+            <li><a href="./works/bug/index.html"><img loading="lazy" src="./home/img/og/og-min-bug.png" alt="bug"></a><p>bug / Apr 22, 2020</p></li>
+            <li><a href="./works/goToTheMoon/index.html"><img loading="lazy" src="./home/img/og/og-min-goToTheMoon.png" alt="goToTheMoon"></a><p>goToTheMoon / Apr 19, 2020</p></li>
+            <li><a href="./works/cell/index.html"><img loading="lazy" src="./home/img/og/og-min-cell.png" alt="cell"></a><p>cell / Apr 17, 2020</p></li>
+            <li><a href="./works/fairy/index.html"><img loading="lazy" src="./home/img/og/og-min-fairy.png" alt="fairy"></a><p>fairy / Apr 16, 2020</p></li>
+            <li><a href="./works/link/index.html"><img loading="lazy" src="./home/img/og/og-min-link.png" alt="link"></a><p>link / Apr 14, 2020</p></li>
+            <li><a href="./works/socialDistance/index.html"><img loading="lazy" src="./home/img/og/og-min-socialDistance.png" alt="socialDistance"></a><p>socialDistance / Apr 13, 2020</p></li>
+            <li><a href="./works/stayHome/index.html"><img loading="lazy" src="./home/img/og/og-min-stayHome.png" alt="stayHome"></a><p>stayHome / Apr 12, 2020</p></li>
+            <li><a href="./works/sunFlower/index.html"><img loading="lazy" src="./home/img/og/og-min-sunFlower.png" alt="sunFlower"></a><p>sunFlower / Apr 10, 2020</p></li>
+            <li><a href="./works/bigBang/index.html"><img loading="lazy" src="./home/img/og/og-min-bigBang.png" alt="bigBang"></a><p>bigBang / Mar 04, 2020</p></li>
+            <li><a href="./works/orangeKun/index.html"><img loading="lazy" src="./home/img/og/og-min-orangeKun.png" alt="orangeKun"></a><p>orangeKun / Feb 29, 2020</p></li>
+            <li><a href="./works/particleParty/index.html"><img loading="lazy" src="./home/img/og/og-min-particleParty.png" alt="particleParty"></a><p>particleParty / Feb 20, 2020</p></li>
+            <li><a href="./works/mamaragan/index.html"><img loading="lazy" src="./home/img/og/og-min-mamaragan.png" alt="mamaragan"></a><p>mamaragan / Feb 16, 2020</p></li>
+            <li><a href="./works/neonWave/index.html"><img loading="lazy" src="./home/img/og/og-min-neonWave.png" alt="neonWave"></a><p>neonWave / Feb 13, 2020</p></li>
+            <li><a href="./works/fullMoon/index.html"><img loading="lazy" src="./home/img/og/og-min-fullMoon.png" alt="fullMoon"></a><p>fullMoon / Feb 11, 2020</p></li>
+            <li><a href="./works/chocolate/index.html"><img loading="lazy" src="./home/img/og/og-min-chocolate.png" alt="chocolate"></a><p>chocolate / Feb 06, 2020</p></li>
+            <li><a href="./works/happyValentine/index.html"><img loading="lazy" src="./home/img/og/og-min-happyValentine.png" alt="happyValentine"></a><p>happyValentine / Feb 05, 2020</p></li>
+            <li><a href="./works/aquarium/index.html"><img loading="lazy" src="./home/img/og/og-min-aquarium.png" alt="aquarium"></a><p>aquarium / Feb 02, 2020</p></li>
+            <li><a href="./works/torch/index.html"><img loading="lazy" src="./home/img/og/og-min-torch.png" alt="torch"></a><p>torch / Jan 30, 2020</p></li>
+            <li><a href="./works/snowyLandscape/index.html"><img loading="lazy" src="./home/img/og/og-min-snowyLandscape.png" alt="snowyLandscape"></a><p>snowyLandscape / Jan 28, 2020</p></li>
+            <li><a href="./works/kiraYaba/index.html"><img loading="lazy" src="./home/img/og/og-min-kiraYaba.png" alt="kiraYaba"></a><p>kiraYaba / Jan 27, 2020</p></li>
+            <li><a href="./works/fireworks/index.html"><img loading="lazy" src="./home/img/og/og-min-fireworks.png" alt="fireworks"></a><p>fireworks / Jan 23, 2020</p></li>
+            <li><a href="./works/65536/index.html"><img loading="lazy" src="./home/img/og/og-min-65536.png" alt="65536"></a><p>65536 / Jan 21, 2020</p></li>
+            <li><a href="./works/rainyDay/index.html"><img loading="lazy" src="./home/img/og/og-min-rainyDay.png" alt="rainyDay"></a><p>rainyDay / Jan 20, 2020</p></li>
+            <li><a href="./works/mellomelloMellow/index.html"><img loading="lazy" src="./home/img/og/og-min-mellomelloMellow.png" alt="mellomelloMellow"></a><p>mellomelloMellow / Jan 15, 2020</p></li>
+            <li><a href="./works/grassGrow/index.html"><img loading="lazy" src="./home/img/og/og-min-grassGrow.png" alt="grassGrow"></a><p>grassGrow / Jan 15, 2020</p></li>
+            <li><a href="./works/fireball/index.html"><img loading="lazy" src="./home/img/og/og-min-fireball.png" alt="fireball"></a><p>fireball / Jan 11, 2020</p></li>
+            <li><a href="./works/milkyWay/index.html"><img loading="lazy" src="./home/img/og/og-min-milkyWay.png" alt="milyWay"></a><p>milkyway / Jan 10, 2020</p></li>
+            <li><a href="./works/starlight/index.html"><img loading="lazy" src="./home/img/og/og-min-starlight.png" alt="starlight"></a><p>starlight / Jan 09, 2020</p></li>
+            <li><a href="./works/jewelrySnow/index.html"><img loading="lazy" src="./home/img/og/og-min-jewelrySnow.png" alt="jewelrySnow"></a><p>jewelrySnow / Jan 08, 2020</p></li>
           </ul>
         </section>
         <!-- About -->
         <section id="about" class="cf">
           <h3>About</h3>
           <div class="aboutLeft">
-            <p><img src="./home/img/mypicture.jpg" alt="my picture"></p>
+            <p><img loading="lazy" src="./home/img/mypicture.jpg" alt="my picture"></p>
             <ul>
               <li><a href="http://www.marukubo.net">Learning Place</a></li>
               <li><a href="https://codepen.io/toshiya-marukubo">CodePen</a></li>
