--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h1><a href="/">Toshiya<br>Marukubo</a></h1>
     </header>
     <div id="mainImage">
-      <img loading="lazy" src="./home/img/og/mainImage-pc.png" alt="main image">
+      <canvas id="canvas"></canvas>
     </div>
     <div id="content">
       <!-- Main -->
@@ -147,6 +147,8 @@
         <small>&copy 2020 Toshiya Marukubo.</small>
       </footer>
     </div>
+    <!-- Script -->
     <script src="./home/js/fadeIn.js"></script>
+    <script src="./home/js/snowyTown.js"></script>
   </body>
 </html>
