--- a/index.html
+++ b/index.html
@@ -149,6 +149,6 @@
     </div>
     <!-- Script -->
     <script src="./home/js/fadeIn.js"></script>
-    <script src="./home/js/snowyTown.js"></script>
+    <script async src="./home/js/snowyTown.js"></script>
   </body>
 </html>
