--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </footer>
     </div>
     <!-- Script -->
-    <script src="./home/js/fadeIn.js"></script>
+    <script defer src="./home/js/fadeIn.js"></script>
     <script defer src="./home/js/snowyTown.js"></script>
   </body>
 </html>
