--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="./home/css/reset.css">
     <link rel="stylesheet" href="./home/css/style.css">
   </head>
-  <body>
+  <body style="display: none;">
     <!-- Header -->
     <header id="header">
       <h1><a href="/">Toshiya<br>Marukubo</a></h1>
