--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <main>
         <!-- Message -->
         <section id="message">
-          <h2>I am doing what I can do on code.</h2>
+          <h2>I am doing what I can do on the code.</h2>
           <nav>
             <ul>
               <li><a href="http://www.marukubo.net">Learning Place</a></li>
