--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
-            <li><a href="./works/springBubble/index.html"><img loading="lazy" src="./home/img/og/og-min-springBubble.png" alt="springBubble"></a><p>springBubble / May 13, 2020</p></li>
+            <li><a href="./works/poppingBall/index.html"><img loading="lazy" src="./home/img/og/og-min-poppingBall.png" alt="poppingBall"></a><p>poppingBall / May 13, 2020</p></li>
             <li><a href="./works/flock/index.html"><img loading="lazy" src="./home/img/og/og-min-flock.png" alt="flock"></a><p>flock / May 11, 2020</p></li>
             <li><a href="./works/section9/index.html"><img loading="lazy" src="./home/img/og/og-min-section9.png" alt="section9"></a><p>section9 / May 08, 2020</p></li>
             <li><a href="./works/loop/index.html"><img loading="lazy" src="./home/img/og/og-min-loop.png" alt="loop"></a><p>loop / May 04, 2020</p></li>
