--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/fog/index.html"><img loading="lazy" src="./home/img/og/og-min-fog.png" alt="fog"></a><p>fog / May 14, 2020</p></li>
             <li><a href="./works/poppingBall/index.html"><img loading="lazy" src="./home/img/og/og-min-poppingBall.png" alt="poppingBall"></a><p>poppingBall / May 13, 2020</p></li>
             <li><a href="./works/flock/index.html"><img loading="lazy" src="./home/img/og/og-min-flock.png" alt="flock"></a><p>flock / May 11, 2020</p></li>
             <li><a href="./works/section9/index.html"><img loading="lazy" src="./home/img/og/og-min-section9.png" alt="section9"></a><p>section9 / May 08, 2020</p></li>
