--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
       <main>
         <!-- Message -->
         <section id="message">
-          <h2>I am doing what I can do on the code.</h2>
+          <h2>I'm doing what I can do on the code.</h2>
+          <p>
+            Published works is using only pure JavaScript, because of learning.
+            I'm not a web dev nor designer, so I don't know small things. <a href="#about">more...</a>
+          </p>
           <nav>
             <ul>
               <li><a href="http://www.marukubo.net">Learning Place</a></li>
@@ -132,11 +136,11 @@
             <h3>This Site</h3>
             <p>
               I like canvas especially now, I thought I want to publish works while learning so I made this site.<br>
-              Basically, just now published works is using only pure JavaScript. I am not using plugin, because of studying.<br>
-              From now on, I am thinking to learn and to publish svg animation, canvas 3D.<br>
+              Basically, just now published works is using only pure JavaScript. I'm not using plugin, because of learning.<br>
+              From now on, I'm thinking to learn and to publish canvas 3D.<br>
             </p>
             <p>
-              All the works's code here is published on <a href="https://codepen.io/toshiya-marukubo">Codepen</a>, <a href="https://github.com/toshiya-marukubo">Github</a>. Please go to see it.
+              All the works's code here are published on <a href="https://codepen.io/toshiya-marukubo">Codepen</a>, <a href="https://github.com/toshiya-marukubo">Github</a>. Please go to see it.
             </p>
             <h3>You</h3>
             <p>
