--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section id="message">
           <h2>I'm doing what I can do on the code.</h2>
           <p>
-            Published works is using only pure JavaScript, because of learning.
+            Published works is using only pure JavaScript, because of learning.<br>
             I'm not a web dev nor designer, so I don't know small things. <a href="#about">more...</a>
           </p>
           <nav>
