--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h2>I'm doing what I can do on the code.</h2>
           <p>
             Published works is using only pure JavaScript, because of learning.<br>
-            I'm not a web dev nor designer, so I don't know small things. <a href="#about">more...</a>
+            I'm not a web dev nor designer, so I don't know small things... <a href="#about">more</a>
           </p>
           <nav>
             <ul>
