--- a/works/shapeOfUniverse/index.html
+++ b/works/shapeOfUniverse/index.html
@@ -53,7 +53,7 @@
         <li>Down to rotate right -</li>
       </ul>
       <p class="count"><input type="range" id="range" min="1" max="100" step="1" value="30"></p>
-      <p class="left">Scroll right to speed up -</p>
+      <p class="right">Scroll right to speed up -</p>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
