--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <section id="works">
           <h3>Works</h3>
           <ul id="dispWorks">
+            <li><a href="./works/blooming/index.html"><img loading="lazy" src="./home/img/og/og-min-blooming.png" alt="blooming"></a><p>blooming / May 26, 2020</p></li>
             <li><a href="./works/textMotionSim/index.html"><img loading="lazy" src="./home/img/og/og-min-textMotionSim.png" alt="textMotionSim"></a><p>textMotionSim / May 24, 2020</p></li>
             <li><a href="./works/tree/index.html"><img loading="lazy" src="./home/img/og/og-min-tree.png" alt="tree"></a><p>tree / May 20, 2020</p></li>
             <li><a href="./works/flowers/index.html"><img loading="lazy" src="./home/img/og/og-min-flowers.png" alt="flowers"></a><p>flowers / May 18, 2020</p></li>
