--- a/works/blooming/index.html
+++ b/works/blooming/index.html
@@ -49,8 +49,8 @@
     <main id="main" style="display: none;">
       <canvas id="canvas">Canvas not supported.</canvas>
       <ul id="navigation">
-        <li>- Up increase</li>
-        <li>Down decrease -</li>
+        <li>- Up decrease</li>
+        <li>Down increase -</li>
       </ul>
     </main>
     <!-- Script -->
